test/conformance/chainsaw/mutate/refactor/foreach/remove-multiple-elements-in-descending-order/policy.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: foreach-remove-elements
spec:
  background: false
  schemaValidation: false
  rules:
    - name: remove-elements
      match:
        any:
          - resources:
              kinds:
                - Pod
      mutate:
        foreach:
          - list: request.object.spec.containers[0].env
            order: Descending
            patchesJson6902: |-
              - path: /spec/containers/0/env/{{elementIndex}}
                op: remove
