test/conformance/chainsaw/mutate/refactor/foreach/remove-multiple-elements-in-descending-order/pod-error.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    (env != null): true
